--- a/en/network.html
+++ b/en/network.html
@@ -136,7 +136,7 @@
 
             <ul>
                 <li>&#x2022; Group of mails (<b>official communications</b>): <a href="https://groups.google.com/g/bayes-plurinacional">https://groups.google.com/g/bayes-plurinacional</a></li>
-                <li>&#x2022; Doodle (<b>day-to-day communications</b>): <a href="https://discord.gg/2dsAjBBFG3">https://discord.gg/2dsAjBBFG3</a></li>
+                <li>&#x2022; Discord (<b>day-to-day communications</b>): <a href="https://discord.gg/2dsAjBBFG3">https://discord.gg/2dsAjBBFG3</a></li>
                 <li>&#x2022; WhatsApp (<b>for specific events such as congresses</b>): <a href=" https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc">https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc</a></li> </li>
             </ul>
 
