--- a/es/redes.html
+++ b/es/redes.html
@@ -158,7 +158,7 @@
 
             <ul>
                 <li>&#x2022; Grupo de mails (<b>comunicaciones oficiales</b>): <a href="https://groups.google.com/g/bayes-plurinacional">https://groups.google.com/g/bayes-plurinacional</a></li>
-                <li>&#x2022; Doodle (<b>comunicaciones para el día a día</b>): <a href="https://discord.gg/2dsAjBBFG3">https://discord.gg/2dsAjBBFG3</a></li>
+                <li>&#x2022; Discord (<b>comunicaciones para el día a día</b>): <a href="https://discord.gg/2dsAjBBFG3">https://discord.gg/2dsAjBBFG3</a></li>
                 <li>&#x2022; WhatsApp (<b>para eventos concretos como congreso</b>): <a href=" https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc">https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc</a></li> </li>
             </ul>
 
