--- a/en/seminar.html
+++ b/en/seminar.html
@@ -145,8 +145,8 @@
 
               <ul>
                 <li>&#x2022; <b>Gonzalo Ríos.</b> Chief Scientific Officer at NoiseGrasp Spa.</li>
-                <li>&#x2022; <b> When:</b> During September (to be announced)</li>
-                <li>&#x2022; <b> Where:</b> Virtual (to be announced)</li>
+                <li>&#x2022; <b> When:</b> 4 September 2023</li>
+                <li>&#x2022; <b> Where:</b>Life at youtube</li>
                 <!--<li>&#x2022; <b>Material:</b> Texto de divulgación <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Pdf de la presentación.</a></li>
                 -->
                 <li>&#x2022; <b>Abstract:</b> It will be presented a model selection paradigm based on the optimal transport criterion: the barycenter under the Wasserstein distance. The selected model will be characterized and some tools for its calculation will be provided.
