--- a/es/seminario.html
+++ b/es/seminario.html
@@ -181,8 +181,8 @@
 
               <ul>
                 <li>&#x2022; <b>Gonzalo Ríos.</b> Chief Scientific Officer - NoiseGrasp Spa.</li>
-                <li>&#x2022; <b> Cuándo:</b> Durante septiembre (lo anunciaremos)</li>
-                <li>&#x2022; <b> Dónde:</b> Virtual (lo anunciaremos)</li>
+                <li>&#x2022; <b> Cuándo:</b> 4 de septiembre del 2023</li>
+                <li>&#x2022; <b> Dónde:</b>En vivo por youtube</li>
                 <!--<li>&#x2022; <b>Material:</b> Texto de divulgación <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Pdf de la presentación.</a></li>
                 -->
                 <li>&#x2022; <b>Resumen:</b> Se presenta un paradigma de selección de modelo basado en el criterio de transporte óptimo: el baricentro bajo la distancia de Wasserstein. Se caracterizará el modelo seleccionado además de entregar algunas herramientas para su cálculo.
