--- a/en/city.html
+++ b/en/city.html
@@ -132,15 +132,32 @@
                 </h4>
                 
                 <div class="section" style="text-align: justify;">
-                    <p>The activities of the Congress will be carried out in the <a href="https://nodosde.gob.ar/"><span class="blue-grey-text">Nodo Tecnológico</span></a> located within the La Isla Industrial Park, in the city of La Banda, Santiago del Estero, Argentina.</p>
-                    <p>Address: Los Molinos Avenue, G4300, La Banda, Santiago del Estero.</p>
+                    <p>The event will be carried out in the <a href="https://nodosde.gob.ar/"><span class="blue-grey-text">Universidad Nacional de Salta</span></a></p>
+                    <p>Address: Av. Bolivia 5150, Salta City, Argentina.</p>
 
                     <div class="row">
-                        <iframe src="https://www.google.com/maps/d/u/2/embed?mid=1Vm4JzAB9oJCVz14oSvcai4Cz2OLl8m8&ehbc=2E312F" width="100%" height="400"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3808.0152892666542!2d-65.40714182562388!3d-24.727401734498752!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses-419!2sar!4v1708628154806!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
 
-                <h4 class="header col s12 light">
+                        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
+            </div>
+
+            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
+            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+            </div>
+        </div>
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <img class="responsive-img" src="../logos/PB.png" alt="BP">
+            </div>
+        </div>
+
+
+
+                <!--<h4 class="header col s12 light">
                     Transport:
                 </h4>
 
@@ -171,7 +188,7 @@
             Accommodation:
             </h4>
 
-            You can find some hotels at<a href="https://www.google.com/maps/search/Hotels/@-27.755704,-64.2817257,14z" target="_blank"> Google Maps</a>
+            You can find some hotels at<a href="https://www.google.com/maps/search/Hotels/@-27.755704,-64.2817257,14z" target="_blank"> Google Maps</a>-->
 
         </div>
 
