--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -176,7 +176,7 @@
                 </h6>
                     
                 <h6 class="header col s12 light">
-                La Escuela Bayesiana Plurinacional se realizará al menos durante 3 días, en principio del 25 al 27 de julio de 2024 en la Universidad Nacional de Salta, Argentina. Contará con talleres prácticos de niveles inicial e intermedio durante la mañana, talleres prácticos de nivel avanzado durante la tarde, y exposiciones y mesas de debate durante la noche. La búsqueda activa de disertantes se realizará durante el primer cuatrimestre del año 2024. La escuela finalizará con un Hackatón que tiene una duración cuatrimestral hasta la publicación de los resultados.
+                La Escuela Bayesiana Plurinacional se realizará al menos durante 3 días, en la semana del 5 de agosto del 2024 en la Universidad Nacional de Salta, Argentina. Contará con talleres prácticos de niveles inicial e intermedio durante la mañana, talleres prácticos de nivel avanzado durante la tarde, y exposiciones y mesas de debate durante la noche. La búsqueda activa de disertantes se realizará durante el primer cuatrimestre del año 2024. La escuela finalizará con un Hackatón que tiene una duración cuatrimestral hasta la publicación de los resultados.
                 </h6>
 
                 <h6 class="header col s12 light">
