--- a/en/about.html
+++ b/en/about.html
@@ -138,7 +138,7 @@
                 Therefore, in the closing activity it was decided to organize the Plurinational Bayesian School 2024.</h6>
 
                 <h6 class="header col s12 light">
-                The Plurinational Bayesian School will be held for at least 3 days, initially from July 25 to 27, 2024 at the National University of Salta, Argentina. It will have practical workshops for beginners and intermediate levels during the morning, practical workshops for advanced levels during the afternoon, and presentations and round table discussions during the evening. The active search for speakers will take place during the first quarter of the year 2024. The school will end with a Hackathon that will last four months until the results are published.
+                The Plurinational Bayesian School will be held for at least 3 days during the week of August 5, 2024 at the National University of Salta, Argentina. It will have practical workshops for beginners and intermediate levels during the morning, practical workshops for advanced levels during the afternoon, and presentations and round table discussions during the evening. The active search for speakers will take place during the first quarter of the year 2024. The school will end with a Hackathon that will last four months until the results are published.
                 </h6>
 
                 <h6 class="header col s12 light">
