--- a/en/history.html
+++ b/en/history.html
@@ -148,6 +148,10 @@
                 We returned with renewed energy. We have already started to build teams to organize next year's activities. In addition to webinars, workshops, face-to-face courses, we decided to organize a Plurinational Bayesian School-Congress 2024. Here are some pictures of the Plurinational Bayesian Congress 2023.
                 </h6>
 
+                <h6 class="header col s12 light">
+                To view the 2023 page, go to <a href="http://bayesdelsur.com.ar/2023/index_en.html">bayesdelsur.com.ar/2023/</a>.
+                </h6>
+
                 <br>
 
             <div class="figcontainer" style="align-items: center;">
