--- a/es/historia.html
+++ b/es/historia.html
@@ -189,6 +189,11 @@
                 Volvimos con la energía renovada. Ya empezamos a armar equipos para organizar las actividades del próximo año. Además de seminarios virtuales, encuentros de trabajo, cursos presenciales, decidimos organizar una Escuela-Congreso Bayesiana Plurinacional 2024. Aquí algunas fotos del Congreso Bayesiano Plurinacional 2023.
                 </h6>
 
+
+                <h6 class="header col s12 light">
+                Para ver la página del año 2023, ir a <a href="http://bayesdelsur.com.ar/2023">bayesdelsur.com.ar/2023</a>.
+                </h6>
+
                 <br>
 
             <div class="figcontainer" style="align-items: center;">
