--- a/en/index.html
+++ b/en/index.html
@@ -124,7 +124,7 @@
             <br><br>
             <div class="center"><img class="responsive-img" src="../logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
             <h6 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h6>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Plurinational America and the Global South.</h6>:
+            <h6 class="header col s12 light">Promoting Bayesian communities in Plurinational America and the Global South.</h6>
             </div>
 
             <br>
@@ -151,7 +151,7 @@
         </div>
 
 
-<!--
+        <!--
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.35;">
             <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="../logos/logo-UNR.jpg" alt="logo_unr"></a>
@@ -159,7 +159,7 @@
 
             <div class="figure" style="flex: 0.3; margin-left: 4%">
             <a href="https://www.routledge.com/"><img class="responsive-img"  src="../logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
+
             </div>
         </div>-->
 
