--- a/en/plural.html
+++ b/en/plural.html
@@ -172,7 +172,7 @@
                 The word Plurinational represents in South America the coexistence of our local cultural diversities.
                 This vision is particularly appropriate for a community working with Bayesian methods because, unlike ad-hoc procedures that select a single hypothesis (e.g. by maximum likelihood), the strict application of probability rules (Bayesian approach) forces us to consider each and every hypothesis.
                 Just as selecting a single hypothesis has known negative consequences in probability (overfitting), the massive loss of cultural diversity caused by the imposition of a single type of society during colonial-modernity is having increasingly obvious ecological consequences.
-                Just as Bayesian methods adapt to uncertainty while believing in mutually contradictory hypotheses, a plurinational society adapts to life through the coexistence of our diversities.
+                Just as Bayesian methods adapt knowledge by believing in mutually contradictory hypotheses, a plurinational society adapts to life through the coexistence of our diversities.
                 </h6>
 
 
