--- a/es/plural.html
+++ b/es/plural.html
@@ -209,7 +209,7 @@
                 La palabra Plurinacional representa en Sudamérica la coexistencia de nuestras diversidades culturales locales.
                 Esta visión es especialmente adecuada para una comunidad que trabaja con métodos bayesianos porque, a diferencia de los procedimientos ad-hoc que seleccionan una única hipótesis (por ejemplo, por máxima verosimilitud), la aplicación estricta de las reglas de probabilidad (enfoque bayesiano) nos obliga a considerar todas y cada una de las hipótesis.
                 Del mismo modo que seleccionar una única hipótesis tiene consecuencias negativas conocidas en probabilidad (overfitting), la masiva pérdida de la diversidad cultural provocada por la imposición de un único tipo de sociedad durante la colonial-modernidad está tenido consecuencia ecológicas cada vez más evidentes.
-                Así como los métodos bayesianos adaptan a la incertidumbre creyendo al mismo tiempo en hipótesis mutuamente contradictorias, una sociedad plurinacional se adapta a la vida mediante la coexistencia de nuestras diversidades.
+                Así como los métodos bayesianos adaptan el conocimiento creyendo al mismo tiempo en hipótesis mutuamente contradictorias, una sociedad plurinacional se adapta a la vida mediante la coexistencia de nuestras diversidades.
                 </h6>
 
 
