--- a/es/comunidad.html
+++ b/es/comunidad.html
@@ -175,13 +175,13 @@
 
               <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redArgentina.html">Argentina</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/argentina.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redArgentina.html">Argentina</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/argentina.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
 
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redBolivia.html">Bolivia</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redBolivia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/bolivia.png" alt="Tapa" style="width: 92%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redBolivia.html">Bolivia</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redBolivia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/bolivia.png" alt="Tapa" style="width: 92%;"></a>
                 </div>
 
             </div>
@@ -189,80 +189,80 @@
 
               <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redBrazil.html">Brasil</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redBrazil.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/brasil.png" alt="Tapa" style="width: 96%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redBrazil.html">Brasil</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redBrazil.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/brasil.png" alt="Tapa" style="width: 96%;"></a>
                 </div>
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redChile.html">Chile</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redChile.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/chile.png" alt="Tapa" style="width: 100%;"></a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redColombia.html">Colombia</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redColombia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/colombia.png" alt="Tapa" style="width: 100%;"></a>
-                </div>
-                <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redCuba.html">Cuba</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redCuba.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/cuba.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redChile.html">Chile</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redChile.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/chile.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redEcuador.html">Ecuador</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redEcuador.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/ecuador.png" alt="Tapa" style="width: 95%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redColombia.html">Colombia</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redColombia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/colombia.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redGuatemala.html">Guatemala</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redGuatemala.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/guatemala.png" alt="Tapa" style="width: 100%;"></a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redHonduras.html">Honduras</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redHonduras.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/honduras.png" alt="Tapa" style="width: 100%;"></a>
-                </div>
-                <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redMexico.html">México</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redMexico.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/mexico.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redCuba.html">Cuba</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redCuba.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/cuba.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redNicaragua.html">Nicaragua</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redNicaragua.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/nicaragua.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redEcuador.html">Ecuador</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redEcuador.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/ecuador.png" alt="Tapa" style="width: 95%;"></a>
                 </div>
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redArgentina.html">Panama</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/panama.png" alt="Tapa" style="width: 90%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redGuatemala.html">Guatemala</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redGuatemala.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/guatemala.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
             </div>
 
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redHonduras.html">Honduras</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redHonduras.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/honduras.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redMexico.html">México</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redMexico.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/mexico.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redParaguay.html">Paraguay</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redParaguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/paraguay.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redNicaragua.html">Nicaragua</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redNicaragua.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/nicaragua.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redPeru.html">Perú</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redPeru.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/peru.png" alt="Tapa" style="width: 84%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redArgentina.html">Panama</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/panama.png" alt="Tapa" style="width: 90%;"></a>
                 </div>
             </div>
 
 
             <div class="row">
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redUruguay.html">Uruguay</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redUruguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/uruguay.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redParaguay.html">Paraguay</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redParaguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/paraguay.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
                 <div class="column">
-                  <h5><a href="http://bayesdelsur.com.ar/redes/redVenezuela.html">Venezuela</a></h5>
-                  <a href="http://bayesdelsur.com.ar/redes/redVenezuela.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/venezuela.png" alt="Tapa" style="width: 100%;"></a>
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redPeru.html">Perú</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redPeru.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/peru.png" alt="Tapa" style="width: 84%;"></a>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redUruguay.html">Uruguay</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redUruguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/uruguay.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/2023/redes/redVenezuela.html">Venezuela</a></h5>
+                  <a href="http://bayesdelsur.com.ar/2023/redes/redVenezuela.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/venezuela.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
             </div>
 
