--- a/es/organiza.html
+++ b/es/organiza.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
+
   <html>
+    <head>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <title>Bayes</title>
+      <link rel="icon" href="logos/favicon.png" type="image/x-icon">
+      <!--Let browser know website is optimized for mobile-->
+      <link rel="stylesheet" href="css/others.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <style>
+        .column {float: left; width: 33.3%; margin-bottom: 16px; padding: 0 8px; }
+        img {float: center; width:  30%;  height: 30%; object-fit: cover; border-radius: 50%;}
+        @media screen and (max-width: 800px) { .column { width: 100%;  display: block; }}
+        a { color: inherit; } 
+        p {text-align: center;}
+      </style>
+    </head>
+
+    <body>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -128,6 +149,21 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             </div>
@@ -137,80 +173,69 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Escuela Bayesiana Plurinacional 2024
-                <h4>
-
-                <h6 class="header col s12 light">
-                La comunidad Bayes Plurinacional realizó con éxito el Congreso Bayesiano Plurinacional 2023 los días 4, 5 y 6 de agosto en las instalaciones de la Secretaría de Ciencia y Tecnología de la provincia de Santiago del Estero, Argentina. La diversidad disciplinar y de regiones fue extraordinaria. Durante el congreso quedó de manifiesto una imperiosa necesidad de contar con mayor cantidad de instancias de formación teórica y práctica en métodos bayesianos. Por ello, en la actividad de cierre se decidió organizar la Escuela Bayesiana Plurinacional 2024.
-                </h6>
-                    
-                <h6 class="header col s12 light">
-                La Escuela Bayesiana Plurinacional se realizará al menos durante 3 días, en la semana del 5 de agosto del 2024 en la Universidad Nacional de Salta, Argentina. Contará con talleres prácticos de niveles inicial e intermedio durante la mañana, talleres prácticos de nivel avanzado durante la tarde, y exposiciones y mesas de debate durante la noche. La búsqueda activa de disertantes se realizará durante el primer cuatrimestre del año 2024. La escuela finalizará con un Hackatón que tiene una duración cuatrimestral hasta la publicación de los resultados.
-                </h6>
-
-                <h6 class="header col s12 light">
-                <ul>
-                    <li> <b>Talleres de nivel inicial-intermedio "Verdades empíricas" (9 a 12 hs):</b>
+                Comité organizador:
+                </h4>
+                
+            </div>
 
 
-                    Tendrán una duración de 3 días y darán una visión amplia, completa y profunda sobre: redes bayesianas; inferencia causal y evaluación de modelos causales; teoría de la información y operacionalización de datos; series temporales y aproximaciones; toma de decisiones y apuestas.
-                    </li>
+            <div class="row">
 
-                    <br>
+               <div class="column">
+		                <a href="https://www.linkedin.com/in/gustavo-landfried-9b601258/?locale=es_ES" target="_blank">
+		                <p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>
+		                <h5><p>Gustavo Landfried</p></h5>
+		                <h6><p>Coordinador</p></h6>
+		                <p class="title">Ciencias de la Computación<br>Ciencias Antropológicas </p>
+		                </a>
+		        </div>
 
-                    <li> <b>Talleres de nivel avanzado "Creencias óptimas"(13:30 a 16:30 hs):</b>
-
-                    Un mínimo de tres talleres de 2 a 3 horas de duración sobre aplicaciones concretas utilizadas en la actualidad en el sector público, privado o en la academia. Serán dictados por personas que emplean actualmente métodos bayesianos en sus trabajos, y se espera que enseñen a replicar parte del proceso de inferencia que habitualmente se usan para la resolución de problemas reales.
-                    </li>
-
-                    <br>
-
-
-                    <li> <b>Exposiciones y debates "Acuerdos intersubjetivos" (18 a 21 hs):</b>
-
-                    Estará organizado en mesas, idealmente sin superposición. Durante la primera hora de cada día se realizan 3 exposiciones de aproximadamente 20 minutos cada una a cargo de referentes de diversas disciplinas que trabajen con métodos bayesianos. Esto será considerado como parte del Congreso Bayesiano Plurinacional 2024. Habrá también exposición de trabajos en formato póster. Se llevarán a cabo paneles de debate sobre temas de interés socio-ambiental.
-                    </li>
-
-                    <br>
-
-                    <li> <b>Hackatón "Apuestas de vida": </b>
-
-                    Será un problema de inferencia con apuestas e intercambio de recursos. El problema de inferencia es un Monty Hall extendido, que requiere conocimientos de series temporales y toma de decisiones vistos en el taller inicial-intermedio.
-                    </li>
-                </ul>
-                </h6>
-
-                <h6 class="header col s12 light">
-                La Escuela Bayesiana Plurinacional tiene por objetivo fortalecer la oferta de formación en inferencia bayesiana mediante el desarrollo de talleres dictados por investigadores de nuestra región.
-                </h6>
-
-                <br>
-
-            <!--<div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
+                <div class="column">
+                    <p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>
+                    <h5><p>María Gimena Serrano</p></h5>
+                    <h6><p>Anfitriona</p></h6>
+                    <p> Secretaria de Ciencia y Tecnología <br>
+                        Santiago del Estero
+                    </p>
                 </div>
-            </div>-->
-            <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
-            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
-            </div>
 
-            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
-            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
-            </div>
-        </div>
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
-            <img class="responsive-img" src="../logos/BP.png" alt="BP">
-            </div>
-        </div>
+                <div class="column">
+                    <p><img src="img/ariel.jpg" alt="Ariel" style="width:80%"></p>
+                    <h5><p>Ariel Salgado</p></h5>
+                    <h6><p>Colaborador</p></h6>
+                    <p class="title">Doctor en Física <br> Postdoc en Berkeley, California </p>
+                </div>
 
 
+                </div>
+
+        <div class="container">
+
+
+                <h6>Organización:</h6>
+
+                <ul>
+                    <li>&#x2022; Andrea Paula Goijman (Instituto Nacional de Tecnología Agropecuaria, Mendoza)</li>
+                    <li>&#x2022; Ariel Silvio Norberto Ramos (Secretaría de Extensión Universitaria - Universidad Nacional de Salta)</li>
+                    <li>&#x2022; Luciano Moffat (Universidad De Buenos Aires)</li>
+                    <li>&#x2022; Enrique Alvarez (Sociedad Argentina de Estadística)</li>
+                    <li>&#x2022; Yasmín Navarrete (Phd Física. Escritora y Profesora. Ciencia Abierta. Santiago, Chile.) </li>
+                    <li>&#x2022; Tomás Olego (Universidad Nacional de Rosario, Fundación Bunge y Born) </li>
+                </ul>
+
+
+                <b>Algunos apoyos en Argentina:</b>
+
+                Rodolfo Guillermo Pregliasco (Instituto Balseiro, Bariloche), Inés Caridi (Instituto de Cálculo, Buenos Aires), Rodrigo Díaz (Instituto de Ciencias Físicas, Universidad Nacional de San Martín), Leandro Luna (Instituo Multidisciplinario de Historia y Ciencias Humanas, Buenos Aires), Inés Samengo (Centro Atómico Bariloche e Instituo Balseiro), Mariano De Paula (Centro de Investigaciones en Fı́sica e Ingenierı́a, Tandı́l), Rita Salvatierra (Facultad de Humanidades, Ciencias Sociales y de la Salud, Santiago del Estero), Gabriel Alejandro Alzamendi (Instituto de Investigaciones y Desarrollo en Bioingenierı́a y Bioinformatica, Entre Rı́os), Alejandro Cassini (Facultad de Filosofía y Letras, Universidad de Buenos Aires), Cristina Noemi Gardenal (Instituto de Diversidad y Ecologı́a Animal, Córdoba), Gabriel Montes Rojas (Instituto Interdisciplinario de Economı́a Polı́tica, Buenos Aires), Silvia Schiaffino (Instituto Superior de Ingenierı́a del Software, Tandı́l), Alejandro Olivieri (Instituo de Quimica Rosario, Universidad Nacional de Rosario), Viviana Andrea Confalonieri (Instituo de Ecologı́a, Genética y Evolución de Buenos Aires), Gastón Bujı́a (Instituto de Cálculo, Buenos Aires), Reinaldo Andrés Moralejo (Facultad de Ciencias Naturales y Museo, La Plata), Adela Tisnés (Instituto de Geografı́a, Historia y Ciencias Sociales, Tandı́l), Jorge A. Vila (Instituo de Matemática Aplicada de San Luis), Marcelo Gabriel Armentano (Instituto Superior de Ingenierı́a del Software, Tandil), Fernando Salvador Buezas (Instituto de Física del Sur, Bahía Blanca), Veronica Gil-Costa (Universidad Nacional de San Luis), Germán Ezequiel Lescano (Universidad Nacional de Santiago del Estero).
+
+            </div>
+
         </div>
-        </div>
+
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
+
+
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
@@ -243,5 +268,20 @@
           );
       </script>
       <!-- END FOOTER -->
+
+        <!--JavaScript at end of body for optimized loading-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
+        <script>
+            $('.dropdown-button').dropdown({
+                inDuration: 300,
+                outDuration: 225,
+                constrain_width: false, // Does not change width of dropdown to that of the activator
+                gutter: 0, // Spacing from edge
+                alignment: 'left' // Displays dropdown with edge aligned to the left of button
+                }
+            );
+        </script>
     </body>
   </html>
